Fix the card jump issue + add pointer:grab to the cards

--- a/caesars-palace/blocks/slider-card/slider-card.css
+++ b/caesars-palace/blocks/slider-card/slider-card.css
@@ -22,6 +22,8 @@
   flex: 1 0 100%;
   height: auto;
   width: 100%;
+  cursor: grab;
+  user-select: none;
 }
 
 .slider-card .card .short-description {
@@ -29,6 +31,7 @@
   border: 1px solid var(--highlight-background-color);
   background: #fff;
   box-shadow: 0 2px 4px 0 rgb(0 0 0 / 10%);
+  height: 180px;
 }
 
 .slider-card .card .short-description .discount
@@ -83,6 +86,11 @@
   background: #fff;
   box-shadow: 0 2px 4px 0 rgb(0 0 0 / 10%);
   display: block;
+  height: 180px;
+}
+
+.slider-card.no-image .card .long-description.show {
+  margin: 0;
 }
 
 .slider-card .card .long-description.show > p:first-of-type {
@@ -121,6 +129,7 @@
     position: relative;
     padding: 16px;
     font-size: 12px;
+    height: 180px;
   }
 
   .slider-card.no-image .card .short-description {
@@ -133,6 +142,11 @@
     position: relative;
     padding: 16px;
     display: block;
+    height: 180px;
+  }
+
+  .slider-card.no-image .card .long-description.show {
+    margin: 0;
   }
 
   .slider-card .card .close-button {
